syntax = "proto3";

package calculator;
option go_package="calculatorpb";


message Sum {
    int32 x = 1;
    int32 y = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}
service CalculatorService{
    //unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    //we want to invalid request like negative numbers
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
 }





